Add offline caching, improve chart scaling, update README to German
- Add AnalyticsCacheService for offline data persistence using App Groups
- Implement try-cache-first pattern in DashboardViewModel
- Fix bar chart width scaling for different date ranges (hourly vs daily)
- Fix chartYScale domain errors in WebsiteDetailView and CompareView
- Fix false offline banner on API errors (now only shows for network issues)
- Update README to German with ValetudiOS-style formatting
- Widget now shares cached data with main app via App Groups

--- a/InsightFlow/Resources/de.lproj/InfoPlist.strings
+++ b/InsightFlow/Resources/de.lproj/InfoPlist.strings
@@ -3,5 +3,5 @@
   Umami Insights
 */
 
-CFBundleDisplayName = "Insights Flow";
-CFBundleName = "Insights Flow";
+CFBundleDisplayName = "InsightFlow";
+CFBundleName = "InsightFlow";
