--- a/InsightFlow/Resources/de.lproj/Localizable.strings
+++ b/InsightFlow/Resources/de.lproj/Localizable.strings
@@ -4,7 +4,7 @@
 */
 
 // MARK: - General
-"app.name" = "Insights Flow";
+"app.name" = "InsightFlow";
 "button.cancel" = "Abbrechen";
 "button.done" = "Fertig";
 "button.save" = "Speichern";
@@ -42,6 +42,7 @@
 "dashboard.empty.title" = "Keine Websites";
 "dashboard.empty.plausible" = "Füge deine erste Website hinzu, um Statistiken zu sehen.";
 "dashboard.empty.umami" = "Du hast noch keine Websites in deinem Umami-Account.";
+"dashboard.offline" = "Offline – zeige gecachte Daten";
 
 // MARK: - Add Site
 "addSite.title" = "Website hinzufügen";
@@ -219,7 +220,7 @@
 
 // MARK: - Support
 "settings.support.title" = "Entwicklung unterstützen";
-"settings.support.subtitle" = "Hilf uns, Insights Flow zu verbessern";
+"settings.support.subtitle" = "Hilf uns, InsightFlow zu verbessern";
 
 "settings.logout" = "Abmelden";
 "settings.logout.confirm" = "Möchtest du dich wirklich abmelden?";
@@ -236,7 +237,7 @@
 
 // MARK: - Support / Donation
 "support.title" = "Unterstützen";
-"support.header" = "Unterstütze Insights Flow";
+"support.header" = "Unterstütze InsightFlow";
 "support.message" = "Software sollte frei sein.\n\nWenn du es dir gerade leisten kannst, freue ich mich über deine Unterstützung. Ansonsten nutze die App einfach gerne – das ist völlig in Ordnung.";
 "support.small" = "Kleine Geste";
 "support.medium" = "Nette Geste";
@@ -251,7 +252,7 @@
 "support.error.pending" = "Kauf wird bearbeitet";
 
 // MARK: - Support Reminder
-"support.reminder.title" = "Dir gefällt Insights Flow?";
+"support.reminder.title" = "Dir gefällt InsightFlow?";
 "support.reminder.message" = "Diese App ist kostenlos und werbefrei. Sie wurde mit viel Liebe entwickelt.\n\nSoftware sollte frei sein. Wenn du es dir leisten kannst, unterstütze die Entwicklung gerne. Ansonsten nutze die App einfach weiter – das ist völlig okay!";
 "support.reminder.support" = "Gerne unterstützen";
 "support.reminder.already" = "Hab ich schon";
@@ -336,7 +337,7 @@
 "insights.lastMonth" = "Letzter Monat";
 
 // MARK: - Onboarding
-"onboarding.welcome.title" = "Willkommen bei Insights Flow";
+"onboarding.welcome.title" = "Willkommen bei InsightFlow";
 "onboarding.welcome.subtitle" = "Deine Website-Statistiken immer dabei – datenschutzfreundlich und übersichtlich.";
 "onboarding.welcome.umami" = "Open Source, selbst gehostet";
 "onboarding.welcome.plausible" = "Einfach und datenschutzfreundlich";
