Rename app to PrivacyFlow, add dashboard website reordering
- Rename InsightFlow to PrivacyFlow throughout the codebase
- Update all bundle IDs to de.godsapp.PrivacyFlow
- Update app groups to group.de.godsapp.PrivacyFlow
- Update URL scheme to privacyflow://
- Add long-press to reorder websites on dashboard
- Website order persists per account
- Add reorder hint localization (DE/EN)

--- a/InsightFlow/Resources/de.lproj/InfoPlist.strings
+++ b/InsightFlow/Resources/de.lproj/InfoPlist.strings
@@ -3,5 +3,5 @@
   Umami Insights
 */
 
-CFBundleDisplayName = "InsightFlow";
-CFBundleName = "InsightFlow";
+CFBundleDisplayName = "PrivacyFlow";
+CFBundleName = "PrivacyFlow";
