--- a/InsightFlow/Resources/en.lproj/InfoPlist.strings
+++ b/InsightFlow/Resources/en.lproj/InfoPlist.strings
@@ -3,5 +3,5 @@
   Umami Insights
 */
 
-CFBundleDisplayName = "InsightFlow";
-CFBundleName = "InsightFlow";
+CFBundleDisplayName = "PrivacyFlow";
+CFBundleName = "PrivacyFlow";
