--- a/InsightFlow/Resources/en.lproj/Localizable.strings
+++ b/InsightFlow/Resources/en.lproj/Localizable.strings
@@ -4,7 +4,7 @@
 */
 
 // MARK: - General
-"app.name" = "InsightFlow";
+"app.name" = "PrivacyFlow";
 "button.cancel" = "Cancel";
 "button.done" = "Done";
 "button.save" = "Save";
@@ -43,6 +43,7 @@
 "dashboard.empty.plausible" = "Add your first website to see statistics.";
 "dashboard.empty.umami" = "You don't have any websites in your Umami account yet.";
 "dashboard.offline" = "Offline – showing cached data";
+"dashboard.reorder.hint" = "Hold and drag to reorder";
 
 // MARK: - Add Site
 "addSite.title" = "Add Website";
@@ -220,7 +221,7 @@
 
 // MARK: - Support
 "settings.support.title" = "Support Development";
-"settings.support.subtitle" = "Help us improve InsightFlow";
+"settings.support.subtitle" = "Help us improve PrivacyFlow";
 "settings.logout" = "Log Out";
 "settings.logout.confirm" = "Are you sure you want to log out?";
 
@@ -236,7 +237,7 @@
 
 // MARK: - Support / Donation
 "support.title" = "Support";
-"support.header" = "Support InsightFlow";
+"support.header" = "Support PrivacyFlow";
 "support.message" = "Software should be free.\n\nIf you can afford it right now, I'd appreciate your support. Otherwise, just enjoy using the app – that's totally fine.";
 "support.small" = "Small Gesture";
 "support.medium" = "Nice Gesture";
@@ -251,7 +252,7 @@
 "support.error.pending" = "Purchase is being processed";
 
 // MARK: - Support Reminder
-"support.reminder.title" = "Enjoying InsightFlow?";
+"support.reminder.title" = "Enjoying PrivacyFlow?";
 "support.reminder.message" = "This app is free and ad-free. It was built with love.\n\nSoftware should be free. If you can afford it, please consider supporting the development. Otherwise, just keep using the app – that's totally okay!";
 "support.reminder.support" = "Happy to Support";
 "support.reminder.already" = "Already Did";
@@ -336,7 +337,7 @@
 "insights.lastMonth" = "Last Month";
 
 // MARK: - Onboarding
-"onboarding.welcome.title" = "Welcome to InsightFlow";
+"onboarding.welcome.title" = "Welcome to PrivacyFlow";
 "onboarding.welcome.subtitle" = "Your website statistics always with you – privacy-friendly and clear.";
 "onboarding.welcome.umami" = "Open source, self-hosted";
 "onboarding.welcome.plausible" = "Simple and privacy-friendly";
