Add dashboard customization mode (v1.2)
- Replace long-press with edit button in toolbar
- Add dashboard customization view with:
  - Graph settings (show/hide, bar/line style)
  - Metric toggles (visitors, pageviews, visits, bounce rate, duration)
  - Website reordering via drag & drop
- Bump version to 1.2

--- a/InsightFlow/Resources/en.lproj/Localizable.strings
+++ b/InsightFlow/Resources/en.lproj/Localizable.strings
@@ -44,6 +44,8 @@
 "dashboard.empty.umami" = "You don't have any websites in your Umami account yet.";
 "dashboard.offline" = "Offline – showing cached data";
 "dashboard.reorder.hint" = "Hold and drag to reorder";
+"dashboard.edit.button" = "Customize Dashboard";
+"dashboard.edit.order" = "Order";
 
 // MARK: - Add Site
 "addSite.title" = "Add Website";
