Dashboard settings improvements (v1.3)
- Fix empty edit screen by moving List out of ScrollView
- Add option to hide date range picker
- Hide graph when all values are zero for cleaner layout
- Move reorder hint to section header
- Add chart style localization key

--- a/InsightFlow/Resources/de.lproj/Localizable.strings
+++ b/InsightFlow/Resources/de.lproj/Localizable.strings
@@ -424,8 +424,11 @@
 
 // MARK: - Dashboard Settings
 "dashboard.settings.title" = "Dashboard Einstellungen";
+"dashboard.settings.display" = "Anzeige";
+"dashboard.settings.showDateRangePicker" = "Zeitraumauswahl anzeigen";
 "dashboard.settings.graph" = "Graph";
 "dashboard.settings.showGraph" = "Graph anzeigen";
+"dashboard.settings.chartStyle" = "Diagrammstil";
 "dashboard.settings.graph.footer" = "Zeigt einen Verlaufsgraph auf jeder Website-Karte an.";
 "dashboard.settings.metrics" = "Angezeigte Metriken";
 "dashboard.settings.metrics.visitors" = "Besucher";
